@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Devel-TestEmbed
-version:      1.1
+version:      1.2
 version_from: lib/Devel/TestEmbed.pm
 installdirs:  site
 requires:
