@@ -1,4 +1,4 @@
-use Test::More tests=>47;
+use Test::More tests=>53;
 use Devel::TestEmbed;
 
 tie *OUT, 'Capture';
@@ -17,7 +17,8 @@ sub erase {
 }
 
 sub slurp {
-  open SLURP, "t/check.output" or die "Can't read check.output: $!\n";
+  my $file = (shift || "t/check.output");
+  open SLURP, $file  or die "Can't read check.output: $!\n";
   my @file = <SLURP>;
   close SLURP;
   @file;
@@ -59,15 +60,18 @@ is($$contents, qq[Recording tests for this session in t/check.output ... done (0
 erase;
 
 # Test 3: Can't touch this.
-open(JUNK,">t/nowrite.file");
-close JUNK;
-chmod 0000, "t/nowrite.file";
-DB::tdump("t/nowrite.file");
-ok($$contents, "got a message");
-like($$contents, qr/can't write history:/, "expected error");
-chmod 0700, "t/nowrite.file";
-unlink "t/nowrite.file";
+SKIP:{
+  skip "Can't do unwritable file test as root", 2 unless $> != 0;
+  open(JUNK,">t/nowrite.file");
+  close JUNK;
+  chmod 0000, "t/nowrite.file";
+  DB::tdump("t/nowrite.file");
+  ok($$contents, "got a message");
+  like($$contents, qr/can't write history:/, "expected error");
+  chmod 0700, "t/nowrite.file";
+  unlink "t/nowrite.file";
 erase;
+}
 
 # Test 4: one test, no setup.
 @ DB::hist = (
@@ -230,7 +234,35 @@ is($$contents, qq[Recording tests for this session in t/check.output ... done (2
      "expected message ok");
 erase;
 
-
+# Test 10 - no output file specified
+unlink("unnamed_test.t");
+@ DB::hist = (
+               '?',
+               'is(0,0)',
+               '$x="this is not trapped"',
+               '$y="this has a comment to trap it"',
+               '# $y should be captured here',
+               '# this comment comes second',
+               'is(1,1)',
+               'c',
+             );
+DB::tdump();
+ok(-e "unnamed_test.t", "default file now exists");
+@lines = slurp("unnamed_test.t");
+ok(int @lines, "Something there");
+is(int @lines, 6, "six lines as expected");
+is_deeply(\@lines, [ qq(use Test::More tests=>2;\n),
+                     qq[is(0,0);\n],
+                     q(# $y should be captured here)."\n",
+                     q(# this comment comes second)."\n",
+                     q($y="this has a comment to trap it";)."\n",
+                     qq[is(1,1);\n] ], 
+          "the output expected");
+ok($$contents, "got a message");
+is($$contents, qq[Recording tests for this session in unnamed_test.t ... done (2 tests).\n],
+     "expected message ok");
+unlink("unnamed_test.t");
+erase;
 # Clean up on termination.
 END {
   erase();
